Improve add vehicle
